feat: add new parameters to default GraphQL queries